# dataSciencePython

./: .gitignore  README.md  REIS_POST.ipynb  pyproject.toml
src/: REIS_POST.ipynb  REIS_POST_2.ipynb
