[project]
name = "datasciencepython"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "joao-reis25", email = "joao.miguel.reis@outlook.com" }
]
dependencies = [
    "pip>=24.3.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.2",
    "ipython>=8.29.0",
    "ipykernel>=6.29.5",
    "notebook>=7.2.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/datasciencepython"]
